--- a/viited_kaarel_kivisalu.bib
+++ b/viited_kaarel_kivisalu.bib
@@ -35,3 +35,11 @@
 	author={Landau, Lev D and Lifshitz, Evgenij M},
 	year={2005}
 }
+
+@book{kardar07,
+	location={New York},
+	title={Statistical Physics of Particles},
+	publisher={Cambridge University Press},
+	author={Mehran Kardar},
+	year={2007}
+},
