--- a/viited_kaarel_kivisalu.bib
+++ b/viited_kaarel_kivisalu.bib
@@ -14,7 +14,7 @@
 
 @online{ipho67, 
 	title = {Problems of the 1st International Physics Olympiad},
-	author = {Waldemar Gorzkowski},
+%	author = {Waldemar Gorzkowski},
 	year = {1967},
 	url ={http://ipho.org/problems-and-solutions/1967/1st_IPhO_1967.pdf},
 	urldate = {2018-11-18}, % YYYY-MM-DD
