--- a/kaarel_kivisalu.tex
+++ b/kaarel_kivisalu.tex
@@ -1,5 +1,6 @@
 \documentclass{trkut}% Reaalkooli vormistus. Muidu "report" või "article".
 \usepackage[style=trkut]{biblatex}% Kasutatud kirjanduse genereerimine
+\usepackage{mleftright, braket}
 \addbibresource{viited_kaarel_kivisalu.bib}% Viidete info fail
 \defbibheading{bibliography}{\addchap{#1}}% Lisame kasutatud materjalid sisukorda
 
@@ -11,6 +12,12 @@
 
 \DeclareMathOperator{\tr}{tr}
 \DeclareMathOperator{\erf}{erf}
+\NewDocumentCommand{\op}{o m}{\IfNoValueTF{#1}{\hat{#2}}{\hat{#2}^{#1}}}
+\renewcommand\bra[1]{{\langle{#1}|}}
+\renewcommand\ket[1]{{|{#1}\rangle}}
+\renewcommand\Bra[1]{\mleft\langle#1\mright|}
+\renewcommand\Ket[1]{\mleft|#1\mright\rangle}
+
 
 \begin{document}
 \maketitle% Tiitelleht
@@ -63,34 +70,34 @@ Järelikult, kui \(dT\) on piisavalt väike, siis on palliga tsükli kasutegur s
 \begin{figure}[h]
     \includegraphics[width=0.5\textwidth]{joonis1.pdf}
     \caption{Probleemi ülesehitus}
-    \cite{palma15}
-    \allikas{}
+    \allikas{\protect\cite{palma15}}
     \label{iphojoonis}% Selle järgi viidatakse, see rida peab olema pärast \caption
 \end{figure}
 
 \section{Statistiline mehaanika}
 
-Kasutades statistilise mehaanika meetodeid on võimalik leida kera soojusmahtuvuse sõltuvus gravitatsioonist \cite{palma15}:
+Kasutades statistilise mehaanika meetodeid on võimalik leida kera soojusmahtuvuse sõltuvus gravitatsioonist \parencite[test]{palma15}:
 \begin{equation}
     \frac{\partial C(g,T)}{\partial g} = -mTY \left( \alpha^2 + \frac{\partial \alpha}{\partial T} \right),
 \end{equation}
 kus \(C\) on soojusmahtuvus, \(g\) on raskuskiirenuds, \(m\) on kera mass, \(T\) on kera temperatuur, \(Y\) on massikeskme kõrgus, \(\alpha\) on lineaarne soojuspaisumistegur.
-\section{Schroedingeri vorrand}
 
-Ajast sõltumatu Scröendingeri võrrand ühes dimensioonis avaldub kujul \cite{griffiths05}
-\begin{equation}
-    \hat{H} \Psi = E \Psi,
-\end{equation}
-kus \(E\) on süsteemi koguenergia ja
-\begin{equation}
-    \hat{H}=-\frac{\hbar^2}{2m}\frac{\d^2x}{dx^2}+V(x).
-\end{equation}
+%\section{Schroedingeri vorrand}
+%
+%Ajast sõltumatu Scröendingeri võrrand ühes dimensioonis avaldub kujul \cite{griffiths05}
+%\begin{equation}
+%    \op{H} \Psi = E \Psi,
+%\end{equation}
+%kus \(E\) on süsteemi koguenergia ja
+%\begin{equation}
+%    \op{H}=-\frac{\hbar^2}{2m}\frac{d^2}{dx^2}+V(x).
+%\end{equation}
 
 \section{Energiatasemed ja soojusmahtuvus}
 
 Kanoonilise ansambli jaoks, mis on kvantmehaaniline ja diskreetne, on kanooniline statistiline summa \(Z\) defineeritud kui jälg Boltzmanni tegurist \cite{kardar07}:
 \begin{equation}
-    Z=\tr(e^{-\beta \hat{H}})=\sum_{n} e^{-\beta E_n}.
+    Z=\tr(e^{-\beta \op{H}})=\sum_{n} e^{-\beta E_n}.
 \end{equation}
 Keskmine energia \(U\) avaldub kui \cite{kardar07}
 \begin{equation}
@@ -107,25 +114,93 @@ Eelnevatest võrranditest on lihtne näha, et
 
 \section{Kvaasi-klassikaline lähendus}
 
-\section{Häiritusteooria}
-
-Schrödingeri võrrandit täpselt lahendada on võimalik ainult lihtsamatel juhtudel. Kui on teada lahend mingi juhu jaoks, siis väikeste häirituste korral on võimalik lahendada võrrandid ligikaudselt kasutades häiritusteooriat.
-
-Oletame, et antud füüsikalise süsteemi Hamiltoonian avaldub kujul
+Schrödingeri võrrandi
 \begin{equation}
-    \hat{H}=H_0+V,
+    -\frac{\hbar^2}{2m}\frac{d^2\psi}{dx^2}+V(x)\psi=E\psi
 \end{equation}
-kus \(V\) on väike häiritus häirimata operaatori \(H_0\), jaoks. Eeltatakse, et \(V\) ja \(H_0\) ei sõltu ajast.
+saab ümber kirjutada järgnevalt:
+\begin{equation}
+    \frac{d^2 \psi}{dx^2}= - \frac{p^2}{\hbar^2}\psi,
+\end{equation}
+kus
+\begin{equation}
+    p(x) \equiv \sqrt{2m[E-V(x)]}
+\end{equation}
+on klassikaline valem osakese impulsi jaoks koguenergiaga $E$ ja potentsiaalse energiaga $V(x)$.
+Piirkonnas, kus $E>V(x)$, on $p(x)$ reaalne. Seda piirkonda kutsutakse \enquote{klassikaliseks}, kuna klasskikaliselt on osake piiratud selles piirkonnas.
+Üldiselt on $\psi$ kompleksfunktsioon, mida saab avaldada klassikalises piirkonnas amplituudi $A(x)$ ja faasi $\phi(x)$ kaudu, mis mõlemad on reaalsed \parencite[316]{griffiths05}:
+\begin{equation}
+    \psi(x)=A(x)e^{i\phi(x)}.
+\end{equation}
+Eeldades, et amplituud $A$ muutub aeglaselt\footnote{Täpsemalt eeldatakse, et $A''/A\ll(\phi ')^2$ ja $A''/A\ll p^2/\hbar^2$.}, avaldub lainefunktsioon klassikalises piirkonnas kujul \parencite[316-318]{griffiths05}
+\begin{equation}
+    \psi = \frac{C_1}{\sqrt{p(x)}}e^{\frac{i}{\hbar}\int p(x)\, dx} +\frac{C_2}{\sqrt{p(x)}}e^{-\frac{i}{\hbar}\int p(x)\, dx},
+    \label{eq:kvaasik1}
+\end{equation}
+kus $C_1$ ja $C_2$ on kompleksarvulised konstandid.
+Valemi \eqref{eq:kvaasik1} saab ka kirja panna kujul \parencite[446]{shankar94}
+\begin{equation}
+    \psi(x)=\frac{A}{\sqrt{p(x)}} \cos \left[ \frac{1}{\hbar}\int p(x)\, dx + B \right],
+    \label{eq:kvaasik2}
+\end{equation}
+kus $A$ ja $B$ on reaalsed parameetrid.
+Kahjuks ei kehti \eqref{eq:kvaasik2} kui $E \approx V(x)$, kuna $\sqrt{p(x)} \to 0$. Olgu $V(x_1)=V(x_2)=E$, $x_1<x_2$ ja lõigul $(x_1, x_2)$ on $V(x)<E$.
+On siiski võimalik vaadeldes lainefunktsiooni $x_1$ lähedal näidata, et lõigul $(x_1, x_2)$ on lainefunktsioon järgmine \parencite[167-170]{landau05}:
+\begin{equation}
+    \psi(x)=\frac{A}{\sqrt{p(x)}} \cos \left[ \frac{1}{\hbar}\int_{x_1}^{x} p(x)\, dx - \frac{\pi}{4} \right],
+\end{equation}
+kui $x_2$ lähedal on lainefunktsioon
+\begin{equation}
+    \psi(x)=\frac{A'}{\sqrt{p(x)}} \cos \left[ \frac{1}{\hbar}\int_{x_2}^{x} p(x)\, dx + \frac{\pi}{4} \right].
+\end{equation}
+Selleks, et need kaks lahendit ühtiksid, peavad $A$ ja $A'$ olema sama magnituudiga ja koosinuste faaside vahe peab olema $\pi$ kordne \parencite[446]{shankar94}:
+\begin{equation}
+    \frac{1}{\hbar}\int_{x_1}^{x} p(x)\, dx - \frac{1}{\hbar}\int_{x_2}^{x} p(x)\, dx - \frac{\pi}{2} = n\pi
+\end{equation}
+või
+\begin{equation}
+    \int_{x_1}^{x_2} p(x)\, dx =\left(n+\frac{1}{2}\right)\pi \hbar.
+\end{equation}
 
-Häirituse teooria diskreetse spektrumi jaoks saab formuleerida järgnevalt. Eeldatakse, et on teada diskreetse spektri omaväärtused (ingl  \textit{eigenvalues}) \(E_0^{(0)}\) ja omafunktsioonid (ingl \textit{eigenfunctions}) \(\phi^0\) häitimata operaatori \(H_0\) jaoks, st et on teada võrrandi
+
+
+\section{Ajast sõltumatu häiritusteooria}
+
+Schrödingeri võrrandit täpselt lahendada on võimalik ainult lihtsamatel juhtudel, keerulisemate juhtude jaoks on vaja teha lähendusi.
+Ajast sõltumatu häiritusteooria (edaspidi häiritusteooria) on lähendusmeetod, mida saab rakendada järgnevas olukorras: teades lahendit hamiltoniaani $\op[0]{H}$ omaväärtusülesandele (ingl \textit{eigenvalue problem}), tahetakse leida lahendit $\op{H}=\op[0]{H}+\op[1]{H}$, kus $\op[1]{H}$ on suhteliselt väike võrreldes $\op[0]{H}$-ga.
+Eeldatakse, et iga $\op[0]{H}$ kidumata omaketi (ingl \textit{eigenket}) $\Ket{n^0}$ omaväärtusega $E_n^0$ jaoks leidub $\op{H}$ kidumata omaket $\Ket{n}$ omaväärtusega $E_n$. Siis eeldades, et $H$ omaketid ja omaväärtused võib kirja panna häiritusseerias \parencite[451]{shankar94}:
+\begin{align}
+    \Ket{n}&=\Ket{n^0}+\Ket{n^1}+\Ket{n^2}+... \\
+    E_n&=E_n^0+E_n^1+E_n^2+...
+\end{align}
+Iga liikme ülaindeks $k$ näitab millise $\op[1]{H}$ astmega eeldatakse, et iga liige on võrdeline.
+Selleks, et leida liikmeid $\Ket{n}$ ja $E_n$ arenduses, alustatakse omaväärtusvõrrandiga \parencite[451]{shankar94}:
 \begin{equation}
-    H_0 \phi=E_0 \phi
+    \op{H}\Ket{n}=E_n\Ket{n}
 \end{equation}
-täpsed lahendid. Soovitakse leida ligikaudseid lahendeid võrrandile
+või
 \begin{equation}
-    \hat{H} \phi=(H_0+V)\phi=E\phi,
+    \big(\op[0]{H} + \op[1]{H}\big)\left(\Ket{n^0}+\Ket{n^1}+...\right)=\left(E_n^0+E_n^1+...\right) \left(\Ket{n^0}+\Ket{n^1}+...\right).
+    \label{terms}
 \end{equation}
-st ligikaudesd avaldised häiritud operaatori \(\hat{H}\) omafunktsioonide \(\phi_n\) ja omaväärtuste \(E_n\) väärtused.\cite{landau05}
+Vaadates võrrandis \eqref{terms} nullindat järku liikmeid saadakse võrrand
+\begin{equation}
+    \op[0]{H}\Ket{n^0}=E_n^0\Ket{n^0}.
+\end{equation}
+Eelduse järgi on see võrrand lahendatud ja omaket $\Ket{n^0}$ ja omaväärtused $E_n^0$ on teada. Vaadates võrrandis \eqref{terms} esimest järku liikmeid saadakse võrrand
+\begin{equation}
+    \op[0]{H}\Ket{n^1} + \op[1]{H}\Ket{n^0} = E_n^0\Ket{n^1} + E_n^1\Ket{n^0}
+\end{equation}
+
+%Häirituse teooria diskreetse spektrumi jaoks saab formuleerida järgnevalt. Eeldatakse, et on teada diskreetse spektri omaväärtused (ingl  \textit{eigenvalues}) \(E_0^{(0)}\) ja omafunktsioonid (ingl \textit{eigenfunctions}) \(\phi^0\) häitimata operaatori \(H_0\) jaoks, st et on teada võrrandi
+%\begin{equation}
+%    H_0 \psi=E_0 \psi
+%\end{equation}
+%täpsed lahendid. Soovitakse leida ligikaudseid lahendeid võrrandile
+%\begin{equation}
+%    \op{H} \psi=(H_0+V)\psi=E\psi,
+%\end{equation}
+%st ligikaudesd avaldised häiritud operaatori \(\op{H}\) omafunktsioonide \(\phi_n\) ja omaväärtuste \(E_n\) väärtused.\parencite{landau05}
 
 \chapter{Praktiline osa}
 
@@ -153,7 +228,7 @@ $E_n$ avaldades saadakse, et
 \begin{equation}
     E_n =\left[\frac{3\pi}{2\sqrt{2}} \frac{\hbar}{\sqrt{m}} \frac{(-a+mg)(b+mg)}{a+b}\right]^{\frac{2}{3}} \left(n+\frac{1}{2}\right)^{\frac{2}{3}} . \label{tukene}
 \end{equation}
-Asendades võrrandisse \ref{tukene} $c=\left[\frac{3\pi}{2\sqrt{2}} \frac{\hbar}{\sqrt{m}} \frac{(-a+mg)(b+mg)}{a+b}\right]^{\frac{2}{3}}$ avaldub statistiline summa järgnevalt:
+Asendades võrrandisse \eqref{tukene} $c=\left[\frac{3\pi}{2\sqrt{2}} \frac{\hbar}{\sqrt{m}} \frac{(-a+mg)(b+mg)}{a+b}\right]^{\frac{2}{3}}$ avaldub statistiline summa järgnevalt:
 \begin{equation}
     Z=\sum_{n=0}^{\infty} e^{-\beta c \left(n+\frac{1}{2}\right)^\frac{2}{3}}.
 \end{equation}
@@ -164,20 +239,24 @@ Kui $\beta c\ll 1$, siis saab summa asendada integraaliga ja $n+\frac{1}{2}\appr
 
 \section{Tükiti paraboolne potentsiaal}
 
-\clearpage
-
 \begin{equation}
     \frac{\sqrt{m} \left( \sqrt{2} {g}^{2} m^2 + {{2}^{\frac{5}{2}}}\, {E_n} a\right)  \arcsin\left( \frac{\sqrt{{{g}^{2}}\, {{m}^{2}}+4 {E_n} a} \sqrt{{{g}^{2}}\, {{m}^{4}}+4 {E_n} a\, {{m}^{2}}}}{{{g}^{2}}\, {{m}^{3}}+4 {E_n} a m}\right) }{4 {{a}^{\frac{3}{2}}}}=\ensuremath{\pi}  \left( n+\frac{1}{2}\right)  \hbar
 \end{equation}
 
-
-\clearpage
-
-\section{Kolmanda astme polünoompotentsiaal}
-Vaatame potentsiaali kujuga
+\section{Häiritusega harmooniline ostsillaator}
+Vaadeldakse järgnevat hamiltooninit
 \begin{equation}
-    V(x)=\frac{m\omega^2 x^2}{2}+mgx+ax^3.
+    \op{H}=\op[0]{H}+\op[1]{H},
 \end{equation}
+kus
+\begin{equation}
+    \op[0]{H}=\frac{\op{p}^2}{2m}+\frac{m\omega^2 \op{x}^2}{2}
+\end{equation}
+ja
+\begin{equation}
+    \op[1]{H}=mg\op{x}
+\end{equation}
+<++>
 Lahendid saame leida häirituse meetodiga. On lihtne potentsiaali
 \begin{equation}
     V(x)=\frac{m\omega^2 x^2}{2}+mgx
@@ -193,4 +272,4 @@ omaväärtused, kui teha asendus \(y=x+\frac{g}{\omega^2}\). Saadakse, et
 \printbibliography
 \kinnitusleht
 
-\end{document}
+    \end{document}
